Changing picture and updating user page to properly display win record

--- a/public/src/profiles-page/profiles-page.html
+++ b/public/src/profiles-page/profiles-page.html
@@ -135,7 +135,7 @@
 
     <div id="main">
       <div id="top" class="fullWidth horizontal center-justified layout">
-        <iron-image id="topImage" class="full" src="./img/collo.png" sizing="cover"></iron-image>
+        <iron-image id="topImage" class="full" src="./img/map.png" sizing="cover"></iron-image>
         <div id="topContainer" class="full vertical center-justified layout center">
           <div id="topContainerText">
             <span>MBR Profiles</span>
