--- a/public/src/profiles-page/profiles-page.html
+++ b/public/src/profiles-page/profiles-page.html
@@ -1,6 +1,3 @@
-<!-- Load the Polymer.Element base class -->
-
-
 <dom-module id="profiles-page">
   <template>
 
@@ -24,7 +21,7 @@
 
       #bottom {
         height: 1100px;
-/*        background-color: #424242;*/
+        /*background-color: #424242;*/
       }
       #top {
         height: 400px;
@@ -80,7 +77,7 @@
         height: 124px;
         padding: 5px;
       }
-      .leaderboardCard2 {
+      .leaderboardCard {
         height: 100%;
         width: 100%;
         --paper-card-content: {
@@ -89,7 +86,7 @@
       }
       .pageButton {
         padding: 0px 0px 0px 0px;
-/*        background-color: #ffffff;*/
+        /*background-color: #ffffff;*/
         color: #E53935;
         font-size: 17px;
         font-weight: bold;
@@ -104,7 +101,7 @@
         margin: 0px 10px 0px 0px;
       }
       .searchMenuButton {
-/*        background-color: #f1f1f1;
+        /*background-color: #f1f1f1;
         color: #E53935;;*/
         min-width: 50px;
         background-color: #E53935;
@@ -126,12 +123,6 @@
     pattern="/profiles/search/:profilesQuery"
     data="{{routeData}}"
     tail="{{subroute}}"></app-route>
-    <!-- Profile view -->
-<!--     <app-route id="appRoute"
-    route="{{route}}"
-    pattern="/profiles/user/:user"
-    data="{{routeData}}"
-    tail="{{subroute}}"></app-route> -->
 
     <div id="main">
       <div id="top" class="fullWidth horizontal center-justified layout">
@@ -142,9 +133,9 @@
           </div>
           <div id="topContainerSearchMenu" class="horizontal center-justified layout">
             <paper-card id="topContainerSearchBar" class="flex">
-              <paper-input id="searchBar" class="full" placeholder="Search"></paper-input>
+              <paper-input id="searchBar" class="full" placeholder="Search">{{searchQuery}}</paper-input>
             </paper-card>
-            <paper-button class="searchMenuButton" raised><iron-icon icon="search"></iron-icon></paper-button>
+            <paper-button class="searchMenuButton" on-click="_filterList" raised><iron-icon icon="search"></iron-icon></paper-button>
             <paper-button class="searchMenuButton" raised><iron-icon icon="refresh"></iron-icon></paper-button>
           </div>
         </div>
@@ -160,10 +151,8 @@
         </div>
         <iron-list items="[[mbrUsers]]" class="fullWidth flex horizontal center-justified layout" as="item" grid>
           <template>
-            <div class="leaderboardGridItem">
-              <!-- <paper-card class="leaderboardCard">
- -->                
-              <paper-card class="leaderboardCard2">
+            <div class="leaderboardGridItem">      
+              <paper-card class="leaderboardCard">
                 <div class='card-content horizontal layout center'>
                 <div class="playerCardPic vertical center-justified layout center">
                   <iron-image src=[[item.pic_link]]></iron-image>
@@ -179,6 +168,7 @@
       </div>
     </div>
 
+    <!-- AJAX element for retrieving initial page of users -->
     <iron-ajax
       id = "retrieveMbrUsers"
       url = "http://localhost:3000/api/mbr_users/alphabetical?limit=20&page=1"
@@ -196,16 +186,33 @@
 
       static get properties() {
         return {
+          /**
+           * Array of user data being displayed
+           * @type {Array}
+           */
           mbrUsers: {
             type: Array
           },
+          /**
+           * Current profiles page index
+           * @type {Object}
+           */
           currentPage: {
             type: Number,
             value: 1
           },
+          /**
+           * Reference to previous route data
+           * @type {Object}
+           */
           oldRouteData: {
             type: Object
           },
+          /**
+           * Array of objects that hold page numbers and
+           * state of buttons in the nav menu
+           * @type {Array}
+           */
           pageArray: {
             type: Array,
             value: [{page: 1, disabled: true},
@@ -217,15 +224,35 @@
         }
       }
 
+      // Polymer life cycle functions
+
+      /**
+       * Fires on first render of the element
+       */
       connectedCallback() {
         super.connectedCallback();
+        // Makes AJAX call for MBR Users
         this.$.retrieveMbrUsers.generateRequest();
       }
 
-      //Helper functions
+      // Helper functions
+      // NOTE: _ character before function name signifies private function
+
+      /**
+       * If str is non-null, return str
+       * If str is null, return 'None'
+       * @param  {Object} Param to check if null or not
+       * @return {String} str or 'None'
+       */
       _emptyBind(str) {
         return str ? str : 'None';
       }
+
+      /**
+       * Give a Number num, return a String representation of the rank
+       * @param  {Number} User's total AP
+       * @return {String} User's alphabetical rank
+       */
       _calculateClass(num) {
         if (num >= 1000) {
           return 'S'; 
@@ -239,14 +266,30 @@
           return 'D';
         }
       }
+
+      /**
+       * Given a name, clean all characters not alphabetical, numerical and underscore
+       * NOTE: If String is empty after applying clean, return 'null'
+       * @param  {String} String to clean
+       * @return {String} Cleaned string or 'null' to replace ''
+       */
       _cleanName(name) {
         name = name.toLowerCase().replace(/[^a-zA-Z0-9-_]/g, '');
         return name == '' ? 'null' : name;
       }
+
+      /**
+       * Update the pageArray property after user clicks nav menu to switch page
+       * @param  {Object} Event object returned after clicking a page button
+       */
       _changePage(e) {
         this.currentPage = e.target.getAttribute('page-to');
         this._changePageArray();
       }
+
+      /**
+       * Update the numbers and state of nav page buttons according to the current page
+       */
       _changePageArray() {
         var calcPage = (this.currentPage < 3) ? 3 : parseInt(this.currentPage);
         this.pageArray = [{page: calcPage - 2, disabled: (calcPage - 2) == this.currentPage},
@@ -255,14 +298,39 @@
                           {page: calcPage + 1, disabled: (calcPage + 1) == this.currentPage},
                           {page: calcPage + 2, disabled: (calcPage + 2) == this.currentPage}];
       }
+
+      // TODO
+      /**
+       * Filter the user list based on the search query entered
+       * @return {[type]}
+       */
+      _filterList() {
+
+      }
+
+      /**
+       * Naviage to profile of user selected by 
+       * pressing profile button in user card
+       * @param  {Object} Event object returned by pressing 
+       *                  profile button in user card
+       */
       _goToProfile(e) {
         var profileName = this._cleanName(e.target.profile.split('|')[0]);
         var profilePath = profileName + '.' + e.target.profile.split('|')[1];
         this.set('route.path', '/user/'+profilePath);
       }
+
+      /**
+       * Format data returned by AJAX call and save into this element's property
+       * @param  {Object} JSON holding data returned by DB
+       */
       _handleMbrUsers(data) {
         this.mbrUsers = data.detail.response.docs;
       }
+
+      /**
+       * Resets the current page and page array properties for page 1
+       */
       _resetPage() {
         this.currentPage = 1;
         this.pageArray = [{page: 1, disabled: true},
@@ -271,9 +339,6 @@
                           {page: 4, disabled: false},
                           {page: 5, disabled: false}];
       }
-
-
-
     }
 
     customElements.define(ProfilesPage.is, ProfilesPage);
